--- a/src/layouts/BasicLayout/Banner/style.module.less
+++ b/src/layouts/BasicLayout/Banner/style.module.less
@@ -15,18 +15,19 @@
         -webkit-text-fill-color: transparent;
         text-shadow: 5px -5px #111, 4px -4px white;
     }
+    .wordTitle {
+        top: 14%;
+        right: 19%;
+        font-size: 23px;
+    }
+    .wordBody {
+        right: 10%;
+        top: 32%;
+        width: 75%;
+        font-size: 18px;
+    }
 }
-.wordTitle {
-    top: 14%;
-    right: 19%;
-    font-size: 23px;
-}
-.wordBody {
-    right: 10%;
-    top: 32%;
-    width: 75%;
-    font-size: 18px;
-}
+
 .bannerWrap {
     background: #f5f5f5;
     overflow: hidden;
@@ -88,8 +89,28 @@
     transition: top ease-in-out 600ms;
 }
 
-@media (max-width: 857px) {
+@media (max-width: 768px) {
     .container {
         margin: 7px;
+    }
+    .word {
+        margin-top: 7px;
+        height: 80px;
+        > img {
+            height: 100%;
+        }
+        .wordTitle {
+            top: 5%;
+            right: 3%;
+            font-size: 16px;
+            color: red;
+            text-shadow: 5px -5px blueviolet, 4px -4px white;
+        }
+        .wordBody {
+            left: 5%;
+            top: 28%;
+            width: 90%;
+            font-size: 14px;
+        }
     }
 }
