--- a/src/layouts/BasicLayout/Header/index.module.less
+++ b/src/layouts/BasicLayout/Header/index.module.less
@@ -1,7 +1,7 @@
 @nav-top-height: 40px;
 @pop-item-height: 44px;
 @nav-top-color: #56adf9;
-@xs-nav-top-wrap: 80px;
+@xs-nav-top-wrap: 60px;
 @main-color: #3197ef;
 @link-color: #108ee9;
 
@@ -9,12 +9,6 @@
     position: relative;
     background: #555;
     background: linear-gradient(#444, #666);
-}
-.container {
-    // padding-right: 15px;
-    // padding-left: 15px;
-    // margin-right: 10%;
-    // margin-left: 10%;
 }
 
 .navbarCollapse {
@@ -62,16 +56,37 @@
 }
 
 .siteLogo {
-    height: 110px;
+    height: 60px;
     padding: 0 13%;
-    > h2 {
-        font-size: 38px;
-        color: #fff;
+    .title {
+        color: #ffffff;
+        font-size: 30px;
+        letter-spacing: 8px;
+        // position: absolute;
+        width: 350px;
+        overflow: hidden;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        span:nth-child(-n + 3) {
+            margin-right: 1px;
+            color: @main-color;
+        }
     }
-    span:first-child {
-        margin-right: 1px;
-        color: @main-color;
+    .titleBar {
+        width: 350px;
+        height: 1px;
+        background: rgba(255, 255, 255, 0.7);
+        position: absolute;
+        top: 45px;
     }
+    .content {
+        margin-top: 5px;
+        font-size: 12px;
+        text-align: center;
+        position: absolute;
+        color: #ffffff;
+        // top: 52px;
+    }
+
     > p {
         margin: -3px 0 0 3px;
         color: #fff;
@@ -123,14 +138,22 @@
     }
     .siteLogo {
         height: @xs-nav-top-wrap;
-        padding-left: 30px;
-        > h2 {
-            padding-top: 5px;
-            font-size: 25px;
+        padding-left: 10px;
+        .title {
+            font-size: 20px;
         }
-        > p {
-            margin-top: -6px;
+        .titleBar {
+            width: 30%;
+            top: 30px;
         }
+        // .content {
+        //     margin-top: 5px;
+        //     font-size: 12px;
+        //     text-align: center;
+        //     position: absolute;
+        //     color: #ffffff;
+        //     // top: 52px;
+        // }
     }
     .navTop {
         display: none;
