--- a/src/layouts/AdminLayout/SiderMenu/index.module.less
+++ b/src/layouts/AdminLayout/SiderMenu/index.module.less
@@ -3,7 +3,7 @@
 }
 .logo {
     height: 46px;
-    background: rgba(1, 12, 29, 0.836);
+    background: rgba(210, 218, 213, 0.836);
     padding: 3px 20px;
     overflow: hidden;
     img {
@@ -16,7 +16,7 @@
         left: 20%;
         display: inline-block;
         margin: 0 auto;
-        color: #fff;
+        color: #0d62e2;
         font-weight: 600;
         font-size: 20px;
         font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -24,8 +24,17 @@
     }
 }
 .menuItem {
-    border-bottom: 1px solid #e6f7ff;
+    // border-bottom: 1px solid #e6f7ff;
     a {
         margin: 0 auto;
     }
+}
+.changeTheme {
+    background: rgba(210, 218, 213, 0.836);
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    padding: 15px;
+    text-align: center;
 }
