首页的一些:

--- a/src/global.less
+++ b/src/global.less
@@ -12,3 +12,32 @@
 // .slick-active {
 //     color: #000;
 // }
+
+.collapse {
+    margin-right: 20px;
+    .ant-collapse {
+        // background: #fff;
+        // border: 0;
+        .ant-collapse-item {
+            // margin-bottom: 15px;
+            .ant-collapse-header {
+                color: #fff;
+                background: lightcoral;
+                // letter-spacing: 5px;
+                .arrow {
+                    letter-spacing: 0;
+                    color: #fff;
+                }
+            }
+            // .ant-collapse-content {
+            //     padding: 5px 20px;
+            //     p {
+            //         line-height: 25px;
+            //     }
+            //     .author {
+            //         text-align: right;
+            //     }
+            // }
+        }
+    }
+}
