--- a/src/layouts/AdminLayout/style.module.less
+++ b/src/layouts/AdminLayout/style.module.less
@@ -1,7 +1,9 @@
 .header {
     background: #fff;
     padding: 0;
+    margin: 0 4px 4px 4px;
     // text-align: center;
+    box-shadow: 0 2px 5px #555;
     .logo {
         height: 46px;
         padding-left: 10px;
@@ -11,4 +13,11 @@
             vertical-align: middle;
         }
     }
+}
+.content {
+    margin: 4px;
+    padding: 10px;
+    background: #f0f2f5;
+    min-height: 280;
+    box-shadow: 0 2px 5px #555;
 }
