--- a/src/components/PageProgress/nprogress.css
+++ b/src/components/PageProgress/nprogress.css
@@ -12,7 +12,7 @@
     left: 0;
 
     width: 100%;
-    height: 4px;
+    height: 2px;
 }
 
 /* Fancy blur effect */
@@ -77,5 +77,19 @@
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@media (max-width: 768px) {
+    #nprogress .bar {
+        background: #009a61;
+
+        position: fixed;
+        z-index: 1031;
+        top: 0;
+        left: 1%;
+
+        width: 98%;
+        height: 2px;
     }
 }
