--- a/src/layouts/BasicLayout/Footer/index.module.less
+++ b/src/layouts/BasicLayout/Footer/index.module.less
@@ -2,6 +2,7 @@
     // margin: 0 0 6px 0;
     margin: 0 4px 6px 4px;
     box-shadow: 0 2px 5px #555;
+    width: 100%;
     margin-bottom: 0;
     text-align: center;
     color: #999;
