--- a/src/layouts/AdminLayout/SiderMenu/index.module.less
+++ b/src/layouts/AdminLayout/SiderMenu/index.module.less
@@ -32,7 +32,7 @@
 }
 .changeTheme {
     background: rgba(210, 218, 213, 0.836);
-    width: 200px;
+    // width: 200px;
     height: 50px;
     position: fixed;
     bottom: 0;
