--- a/src/layouts/AdminLayout/style.module.less
+++ b/src/layouts/AdminLayout/style.module.less
@@ -1,8 +1,7 @@
 .header {
     background: #fff;
-    padding: 0;
-    margin: 0 4px 4px 4px;
-    // text-align: center;
+    padding: 4px;
+    margin: 4px;
     box-shadow: 0 2px 5px #555;
     .logo {
         height: 46px;
@@ -16,8 +15,8 @@
 }
 .content {
     margin: 4px;
-    padding: 10px;
+    // padding: 5px;
     background: #f0f2f5;
     min-height: 280;
-    box-shadow: 0 2px 5px #555;
+    // box-shadow: 0 2px 5px #555;
 }
