--- a/src/layouts/AdminLayout/style.module.less
+++ b/src/layouts/AdminLayout/style.module.less
@@ -1,19 +1,5 @@
-.header {
-    background: #fff;
-    padding: 4px;
-    margin: 4px;
-    box-shadow: 0 2px 5px #555;
-    .logo {
-        height: 46px;
-        padding-left: 10px;
-        img {
-            display: inline-block;
-            height: 25px;
-            vertical-align: middle;
-        }
-    }
-}
 .content {
+    top: 50px;
     margin: 4px;
     // padding: 5px;
     background: #f0f2f5;
